Added new buttons and UI changes
Added new buttons and UI changes